--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.0",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "next": "15.4.6",
     "react": "19.1.0",
