--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-java": "^6.0.2",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-python": "^6.2.1",
     "@tanstack/react-query": "^5.85.0",
+    "@uiw/react-codemirror": "^4.25.1",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.7.0",
