--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@codemirror/lang-java": "^6.0.2",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-python": "^6.2.1",
+    "@tanstack/query-async-storage-persister": "^5.85.5",
+    "@tanstack/query-sync-storage-persister": "^5.85.5",
     "@tanstack/react-query": "^5.85.0",
+    "@tanstack/react-query-persist-client": "^5.85.5",
     "@uiw/react-codemirror": "^4.25.1",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
